# robo-commander

./: .gitignore  CMakeLists.txt  README.md  RoboCommanderConfig.cmake.in  cmake_uninstall.cmake  compile_commands.json  package.xml
cmake/: RoboCommanderConfig.cmake.in  RoboCommanderConfigVersion.cmake.in  robocommanderConfig.cmake.in  robocommanderConfigVersion.cmake.in
config/controls/: camera_gimbal_pid.config  pid-tunings.txt  pid.cfg.txt  pid.config
config/filters/: ekf.config
config/profiles/: 4wd-config.txt  dualclaw.config  dualclaw.txt
config/sensors/: RTIMULib.ini  mpu9250.ini  pid_imu.ini  razor_m0_imu.ini
config/udev/: 99-roboclaws.rules
data/: sineData.csv
data/fusion/: 1-0859m_straight_slow.csv  1-1811m_straight_fast.csv  ccw_turn_slow.csv  crude_1m_squareV2.csv  crude_1m_squareV3.csv  cw_turn_slow.csv
data/fusion/output/: ekf_outputs.csv  isam_outputs.csv
deprecated/4WD/: four_wd.cpp
deprecated/CameraStreamer/: camera_opencv.py
deprecated/DC_Motor/: motor-driver.h
deprecated/Navigation/: test_nav.cpp
deprecated/PID/: makefile
deprecated/RazorIMU/: makefile
deprecated/RoboClaw/: makefile
deprecated/SerialDev/: makefile
deprecated/UDP/: makefile
deprecated/sonar_mb_7047/: mb7047.h
doc/: cuda_conversion_scratchpad.txt  vboats_processing_perf_test.txt
extras/: cuda_conversion_notes.txt  cuda_conversion_scratchpad.txt
extras/data/: pid.csv
extras/data/fusion/: crude_1m_square.csv
include/actuators/: dc_motor.h  servo.h
include/algorithms/: isam.h
include/algorithms/vboats/: common.h  image_utils.h  obstacle.h  plot_utils.h  umap_processing_params.h  uv_filtering.h  (+6 more)
include/base/: actuators.h  definitions.h  motors.h  params.h  peripherals.h  sim_params.h
include/comms/: i2c.h  serial.h  serial_dev.h  uart.h  udp.h
include/communication/: i2c.h  i2c_bus.h  i2c_device.h  uart.h  udp.h
include/controllers/: waypoint_follower.h
include/controls/: pid.h  waypoint_follower.h
include/devices/: camera_gimbal.h  pca-9685.h  pca9685.h  roboclaw.h  roboclaw_px4.h  roboclaw_unix.h  tca9548a.h
include/drivetrains/: diffdrive_claw.h  diffdrive_roboclaw.h  dual_roboclaw.h
include/filters/: ekf.h  isam.h
include/interfaces/: android_app_interface.h
include/profiles/: dual_roboclaw.h  four_wd.h
include/robots/: swanson.h  swansonV2.h
include/sensors/: bno055.h  bno055_i2c.h  camera.h  camera_d415.h  camera_d4xx.h  encoder.h  generic_rtimu.h  imu.h  mpu9250.h
include/utilities/: cv_utils.h  image_utils.h  matplotlibcpp.h  plot_utils.h  utils.h
include/utils/: debug.h  utils.h
scripts/devices/: i2c_device.py  tca9548a.py
scripts/sensors/: BNO055.py
scripts/utils/: csvPlot.py
src/: CMakeLists.txt
src/actuators/: CMakeLists.txt  dc_motor.cpp  motor-driver.cpp  servo.cpp
src/algorithms/: ekf.cpp  isam.cpp
src/algorithms/vboats/: image_utils.cpp  obstacle.cpp  plot_utils.cpp  uvmap_utils.cpp  vboats.cpp  vboats_utils.cpp
src/comms/: CMakeLists.txt  i2c.cpp  serial.cpp  serial_dev.cpp  uart.cpp  udp.cpp
src/communication/: i2c.cpp  i2c_device.cpp  serial.cpp  uart.cpp  udp.cpp
src/controllers/: pid.cpp  waypoint_follower.cpp
src/controls/: CMakeLists.txt  pid.cpp  waypoint_follower.cpp
src/devices/: CMakeLists.txt  camera_gimbal.cpp  pca-9685.cpp  pca9685.cpp  roboclaw.cpp  roboclaw_px4.cpp  roboclaw_unix.cpp  tca9548a.cpp
src/drivetrains/: diffdrive_claw.cpp  dual_roboclaw.cpp
src/filters/: CMakeLists.txt  ekf.cpp  isam.cpp
src/interfaces/: android_app_interface.cpp
src/profiles/: CMakeLists.txt  dual_roboclaw.cpp  four_wd.cpp
src/robots/: CMakeLists.txt  swanson.cpp  swansonV2.cpp
src/sensors/: CMakeLists.txt  bno055.cpp  bno055_i2c.cpp  camera.cpp  camera_d415.cpp  camera_d4xx.cpp  encoder.cpp  generic_rtimu.cpp  imu.cpp  mpu9250.cpp
src/utilities/: cv_utils.cpp  image_utils.cpp  plot_utils.cpp  testing_utils.cpp  utils.cpp  xbee.cpp
src/utils/: CMakeLists.txt  debug.cpp  utils.cpp
src/vehicle_profiles/: dual_roboclaw.cpp
test/actuators/: test_dc.cpp  test_motors.cpp  test_servo.cpp
test/comms/: test_i2c.cpp  test_serial.cpp  test_uart.cpp  test_udp.cpp
test/controls/: test_camera_gimbal.cpp  test_pid.cpp  test_waypoint_follower.cpp
test/data/: ekf_output.csv
test/devices/: test_camera_gimbal_assembly.cpp  test_leds.cpp  test_pca9685.cpp  test_roboclaw.cpp
test/filters/: test_ekf.cpp  test_isam.cpp
test/profiles/: test_4wd.cpp  test_dual_roboclaw.cpp
test/robots/: test_swansonV2.cpp
test/sensors/: test_bno055.cpp  test_camera.cpp  test_encoder.cpp  test_imu.cpp  test_mpu9250.cpp  test_mpu9250_read.cpp
test/utils/: test.json  test_json.cpp  test_utils.cpp
tests/: CMakeLists.txt
tests/actuators/: test_dc.cpp  test_motors.cpp  test_servo.cpp
tests/algorithms/: test_ekf.cpp  test_isam.cpp
tests/algorithms/vboats/: test_image_utils.cpp  test_vboats.cpp
tests/communication/: test_i2c.cpp  test_serial.cpp  test_uart.cpp  test_udp.cpp
tests/controllers/: test_camera_gimbal.cpp  test_pid.cpp  test_waypoint_follower.cpp
tests/devices/: test_camera_gimbal_assembly.cpp  test_leds.cpp  test_pca9685.cpp  test_roboclaw.cpp  test_roboclaw_px4.cpp  test_roboclaw_unix.cpp  test_roboclaw_usb.cpp  test_tca9548a.cpp
tests/drivetrains/: test_dual_roboclaw.cpp
tests/interfaces/: test_android_app_interface.cpp
tests/robots/: test_swansonV2.cpp  test_swansonV2_comms.cpp
tests/sensors/: test_bno055.cpp  test_bno055_i2c.cpp  test_bno055_muxed.cpp  test_camera.cpp  test_camera_d415.cpp  test_camera_d4xx.cpp  test_encoder.cpp  test_imu.cpp  test_minimal_d415.cpp  test_minimal_d4xx.cpp  test_mpu9250.cpp  test_rtimu.cpp
tests/utilities/: test_image_utils.cpp  test_utils.cpp
tests/vehicle_profiles/: test_dual_roboclaw.cpp
tmp/4WD/: makefile
tmp/CameraStreamer/: run_streamer.sh
tmp/DC_Motor/: TestDCMotor  dc_motor.cpp  dc_motor.h  makefile  test_dc.cpp
tmp/Encoder/: makefile
tmp/Navigation/: waypoint_follower.cpp  waypoint_follower.h
tmp/Utilities/: makefile
tmp/sonar_mb_7047/: TestSONAR  mb7047.cpp  sensorHandler.cpp
tools/: install_dependencies.sh
(+1 files in other folders)
